mis/public/assets_new/css/custom.css
/*!
 * STYLES BY JEJ_MIS
 */

@media(min-width: 480px) {
    .modal .modal-body, .modal-body {
        max-height: 400px;
        overflow-x: auto;
        overflow-y: auto;
    }
}
@media(max-width: 479px) {
    .modal .modal-body, .modal-body {
        overflow-x: auto;
    }
}

html {
    background-color: #333;
}

body.none {
    display: none;
}

body.null {
    font-size: 13px;
    padding-top: 25px;
    padding-left: 5px;
    padding-right: 5px;
}

#login_dialog {
    -webkit-box-shadow: 0px 0px 21px 5px rgba(0,0,0,0.75);
    -moz-box-shadow: 0px 0px 21px 5px rgba(0,0,0,0.75);
    box-shadow: 0px 0px 21px 5px rgba(0,0,0,0.75);
    width: 275px; background-color: #FFFFFF;
    border-radius: 5px;
    margin: 0 auto;
    justify-content: center;
}

#table {
  background-color: transparent;
}

table {
    width: 100%;
}

thead, tbody > tr > td:hover, tbody > tr > td:hover > a {
    color: #fff;
    background-color: #666666;
}

th, td {
    padding: 2px 7px; text-spacing: normal;
}

#logo {
    font-size: 22px;
    font-weight: bold;
}

.mobilizer_logo {
    color: #FF0000
}

.margin-fix {
    margin-left: 1px;
    margin-right: 1px;
}

#header {
  -webkit-box-shadow: 0px 0px 10px rgba(0,0,0,.8);
  -moz-box-shadow: 0px 0px 10px rgba(0,0,0,.8);
  box-shadow: 0px 0px 10px rgba(0,0,0,.8);
}

.table-fixed tr:after {
    content: '';
    display: block;
    visibility: hidden;
    clear: both;
}
.table-fixed thead {
    //width: 100%;
}
.table-fixed tbody {
  height: 120px;
  overflow-y: auto;
  width: 100%;
}
.table-fixed thead, .table-fixed tbody, .table-fixed tr, .table-fixed td, .table-fixed th {
  display: block;
}
.table-fixed tbody td, .table-fixed thead > tr > th {
  width: 12.5%;
  float: left;
}
.progress-bar.animate {
  width: 100%;
}
.fluid {
  top: 0px;
  bottom: 0px;
}
    
/*!
 * Z-INDEX PROPERTIES
 */

.col-md-0 {
    padding-left: 8px;
    padding-right: 8px;
}

#header {
    z-index: 100000;
}

#footer {
    z-index: 100009;
}

.js-loading-bar {
    z-index: 100011;
}

.image {
    width: 200px;
}

